<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <Button
        android:id="@+id/b1"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="165dp"
        android:layout_marginTop="39dp"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/b2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b1"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/b1"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/b3"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b2"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/b2"
        android:text="@string/btn3" />


    <Button
        android:id="@+id/b4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b3"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/b1"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/b5"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b4"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toStartOf="@id/b4"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/b6"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b1"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toStartOf="@id/b5"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/b7"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b6"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toStartOf="@id/b6"
        android:text="@string/btn7" />


    <Button
        android:id="@+id/b8"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b7"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/b7"
        android:text="@string/btn8" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="442dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dis1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dis2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dis3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dis4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_layout_below_id_b4_and_layout_tostartof_id_b4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_layout_below_id_b1_and_layout_tostartof_id_b5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_layout_below_id_b6_and_layout_tostartof_id_b6"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_layout_below_id_b7_and_layout_toendof_id"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>